--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "php": "^7.2",
     "ext-json": "*",
     "illuminate/queue": "^6.0",
-    "php-amqplib/php-amqplib": "^2.11"
+    "php-amqplib/php-amqplib": "^2.11",
+    "bugsnag/bugsnag-laravel": "^2.17"
   },
   "require-dev": {
     "phpunit/phpunit": "^8.4",
